2006-06-01  Harri Pitkänen  <hatapitk@iki.fi>

	* Add error recovery and fix some related bugs
	* Increase version to 0.9

2006-05-30  Kai Solehmainen  <kai.solehmainen@oikeatoliot.fi>

	* nl_langinfo() ported for Windows version.
	* Dictionary path is searched from Windows registry:
		- first from HKEY_CURRENT_USER\SOFTWARE\Voikko\DictionaryPath
		- and then if not found from HKEY_LOCAL_MACHINE\SOFTWARE\Voikko\DictionaryPath 
	* Minor changes for Windows version. 

2006-05-30  Harri Pitkänen  <hatapitk@iki.fi>

	* Suggestions are sorted by estimated correctness:
	  compound suggestions and suggestions that contain both letter
	  and case changes are given lower priority.

2006-05-29  Harri Pitkänen  <hatapitk@iki.fi>

	* Character deletion suggestions
	* Character insertion suggestions
	* Character swap suggestions

2006-05-27  Harri Pitkänen  <hatapitk@iki.fi>

	* Character replacing suggestions

2006-05-24  Harri Pitkänen  <hatapitk@iki.fi>

	* Do not add hyphenation points if hyphenation is forbidden in Malaga
	* Implement VOIKKO_OPT_NO_UGLY_HYPHENATION
	* New options in voikkohyphenate: no_ugly_hyphenation=0|1

2006-05-24  Harri Pitkänen  <hatapitk@iki.fi>

	* Word splitting suggestions

2006-05-23  Harri Pitkänen  <hatapitk@iki.fi>

	* Vowel changing suggestions

2006-05-22  Harri Pitkänen  <hatapitk@iki.fi>

	* Add manual pages for voikkospell and voikkohyphenate

2006-05-22  Harri Pitkänen  <hatapitk@iki.fi>

	* Character case correcting suggestions
	* New options in voikkospell: -s, accept_first_uppercase=0|1

2006-05-20  Harri Pitkänen  <hatapitk@iki.fi>

	* Add cache size parameter to voikko_init
	* Version 0.3

2006-05-20  Harri Pitkänen  <hatapitk@iki.fi>

	* Case-sensitive checking
	* Iconv handle caching
	* Spellchecker result cache

2006-04-24  Harri Pitkänen  <hatapitk@iki.fi>

	* Implement VOIKKO_OPT_COMPOUND_INTERSECT_LEVEL

2006-04-23  Harri Pitkänen  <hatapitk@iki.fi>

	* Fix use-after-free in voikko_do_spell
