@@ -1,3 +1,7 @@
+2006-06-06 Harri Pitkänen  <hatapitk@iki.fi>
+
+	* Improve character insertion suggestions
+
 2006-06-01  Harri Pitkänen  <hatapitk@iki.fi>
 
 	* Add error recovery and fix some related bugs
